#820 - better translation names for letters D and E, refs #820

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -20,7 +20,7 @@
 #
 
 wizard.login_online_storage.connecting=Connecting...
-dialog.updatecheck.downloadAndUpdateSilent=Download and silently update now
+dialog.update_check.downloadAndUpdateSilent=Download and silently update now
 general.reject=Reject
 online_storage_change_account.name=Change
 online_storage_change_account.key=C
@@ -146,30 +146,30 @@ delete_confimation.busy.title=Deleting file(s)
 delete_confimation.text=Are you sure you want to delete the following file(s)\:\n (Note that these files are really deleted from your system, not moved to the "Recycle Bin").
 delete_confimation.text_delete=Are you sure you want to permanently delete the following file(s)?
 delete_confimation.text_delete_directory=Are you sure you want to permanently delete the following file(s) and\nor directories (including subdirectories and the files)?
-delete_confimation.text_movetorecyclebin=Are you sure you want to move the following file(s) to the PowerFolder Recycle Bin?
-delete_confimation.text_movetorecyclebin_DIR=<DIR>
-delete_confimation.text_movetorecyclebin_directory=Are you sure you want to move the following file(s) and\nor directories (including subdirectories and the files) to\nthe PowerFolder Recycle Bin?
+delete_confimation.text_move_to_recycle_bin=Are you sure you want to move the following file(s) to the PowerFolder Recycle Bin?
+delete_confimation.text_move_to_recycle_bin_DIR=<DIR>
+delete_confimation.text_move_to_recycle_bin_directory=Are you sure you want to move the following file(s) and\nor directories (including subdirectories and the files) to\nthe PowerFolder Recycle Bin?
 delete_confimation.title=Delete files?
 
-deletefile.description=Delete selected file(s)
-deletefile.key=F
-deletefile.name=Delete File(s)
+delete_file.description=Delete selected file(s)
+delete_file.key=F
+delete_file.name=Delete File(s)
 
-dialog.addmembertofriendlist.button.add=Add To Friends
-dialog.addmembertofriendlist.explain=You can easily change the friend\nstatus using the context menus (right-mouse-click).
-dialog.addmembertofriendlist.messageTitle=Message from {0}
-dialog.addmembertofriendlist.question={0} joined one or more PowerFolders\:\n\n{1}\nYou may wish to add him to your friend list.
-dialog.addmembertofriendlist.question2={0} has added you to his friend list.\n\nYou may wish to add him to your friend list.
-dialog.addmembertofriendlist.title=Add {0} to friend list
-dialog.alreadyrunning.exitbutton=Exit
-dialog.alreadyrunning.startbutton=Start anyways
-dialog.alreadyrunning.title=Already running
-dialog.alreadyrunning.warning=PowerFolder already running\n\nHint\: If you restarted PowerFolder, \nkill all javaw/java processes and try again
-dialog.binderror=Unable to bind port\!
-dialog.binderror.option.exit=Exit PowerFolder
-dialog.binderror.option.ignore=Continue
-dialog.binderror.option.text=Unable to bind on specified port(s)\!\nA bound port is required for PowerFolder to\nreceive incoming connections.
-dialog.binderror.option.title=Port binding error\!
+dialog.add_member_to_friend_list.button.add=Add To Friends
+dialog.add_member_to_friend_list.explain=You can easily change the friend\nstatus using the context menus (right-mouse-click).
+dialog.add_member_to_friend_list.messageTitle=Message from {0}
+dialog.add_member_to_friend_list.question={0} joined one or more PowerFolders\:\n\n{1}\nYou may wish to add him to your friend list.
+dialog.add_member_to_friend_list.question2={0} has added you to his friend list.\n\nYou may wish to add him to your friend list.
+dialog.add_member_to_friend_list.title=Add {0} to friend list
+dialog.already_running.exit_button=Exit
+dialog.already_running.start_button=Start anyways
+dialog.already_running.title=Already running
+dialog.already_running.warning=PowerFolder already running\n\nHint\: If you restarted PowerFolder, \nkill all javaw/java processes and try again
+dialog.bind_error=Unable to bind port\!
+dialog.bind_error.option.exit=Exit PowerFolder
+dialog.bind_error.option.ignore=Continue
+dialog.bind_error.option.text=Unable to bind on specified port(s)\!\nA bound port is required for PowerFolder to\nreceive incoming connections.
+dialog.bind_error.option.title=Port binding error\!
 dialog.connect.connecting=Connecting
 dialog.connect.connecting_to=Connecting to {0}...
 dialog.connection_problem=Connection problem
@@ -204,16 +204,16 @@ dialog.create_edit_profile.title_edit=Edit custom transfer mode
 dialog.create_edit_profile.weekdays=Weekdays
 dialog.create_edit_profile.weekends=Weekends
 dialog.delete_profile.title=Delete custom transfer mode
-dialog.directorychooser.new.description=New directory
-dialog.directorychooser.new.exists={0}\nalready exists
-dialog.directorychooser.new.key=N
-dialog.directorychooser.new.name=New
-dialog.directorychooser.new.problem=There was a problem creating\n{0}
-dialog.directorychooser.text=Select a directory from the list below, then click 'OK'.\nYou can expand directories by clicking on the anchors.
-dialog.directorychooser.title=Select directory
-dialog.fatalerror.title=Fatal Error
-dialog.newdirectorycreator.text=Enter the name of the new subdirectory of\n{0}
-dialog.newdirectorycreator.title=New directory
+dialog.directory_chooser.new.description=New directory
+dialog.directory_chooser.new.exists={0}\nalready exists
+dialog.directory_chooser.new.key=N
+dialog.directory_chooser.new.name=New
+dialog.directory_chooser.new.problem=There was a problem creating\n{0}
+dialog.directory_chooser.text=Select a directory from the list below, then click 'OK'.\nYou can expand directories by clicking on the anchors.
+dialog.directory_chooser.title=Select directory
+dialog.fatal_error.title=Fatal Error
+dialog.new_directory_creator.text=Enter the name of the new subdirectory of\n{0}
+dialog.new_directory_creator.title=New directory
 dialog.synchronization.choose=Please choose your synchronization action
 dialog.synchronization.duplicate.delete=Deleting this transfer mode will affect all these folders.
 dialog.synchronization.duplicate.edit=Editing this transfer mode will affect all these folders.
@@ -227,34 +227,34 @@ dialog.synchronization.title=Manual synchronization
 dialog.unable_to_connect_to_address=Unable to connect to {0}
 dialog.unable_to_connect_to_member=Unable to connect to {0}
 dialog.unable_to_open_port=Unable to open on local port {0}, maybe PowerFolder is already running
-dialog.updatecheck.developmentversion.optionrestart=Restart
-dialog.updatecheck.downloadAndUpdate=Download and update now
-dialog.updatecheck.failed.text=Update failed. Please check your Internet connection.\n \nPowerFolder Pro\: Please also check your Update-Service account under\nSettings/Pro Settings/PowerFolder Pro Loader.
-dialog.updatecheck.failed.title=Update failed
-dialog.updatecheck.gotoHomepage=Go to PowerFolder homepage
-dialog.updatecheck.noUpdateAvailable=This version is up to date
-dialog.updatecheck.nothingNeverAsk=Nothing and never ask again
-dialog.updatecheck.text=A newer version of PowerFolder is available            \n\nThis version\: v{0}\nLatest available\: v{1} (newer)\n
-dialog.updatecheck.title=Newer version available
+dialog.update_check.development_version.option_restart=Restart
+dialog.update_check.downloadAndUpdate=Download and update now
+dialog.update_check.failed.text=Update failed. Please check your Internet connection.\n \nPowerFolder Pro\: Please also check your Update-Service account under\nSettings/Pro Settings/PowerFolder Pro Loader.
+dialog.update_check.failed.title=Update failed
+dialog.update_check.gotoHomepage=Go to PowerFolder homepage
+dialog.update_check.noUpdateAvailable=This version is up to date
+dialog.update_check.nothingNeverAsk=Nothing and never ask again
+dialog.update_check.text=A newer version of PowerFolder is available            \n\nThis version\: v{0}\nLatest available\: v{1} (newer)\n
+dialog.update_check.title=Newer version available
 dialog.user_select.online_only=
 dialog.user_select.text=Select users to invite. Hold down Ctrl key to select multiple users.
 dialog.user_select.title=Select Users
 
-disablesilentmode.description=Silent mode currently active, added/modified files won't be found. Press for full mode
-disablesilentmode.key=w
-disablesilentmode.name=Wakeup\!
+disable_silent_mode.description=Silent mode currently active, added/modified files won't be found. Press for full mode
+disable_silent_mode.key=w
+disable_silent_mode.name=Wakeup\!
 
 download_panel.auto_cleanup.description=Cleans up any downloads when they complete
 download_panel.auto_cleanup.name=Auto-cleanup
 
-downloadfile.description=Download selected file(s) (or files in directory). Deleted files will be re-downloaded
-downloadfile.failed.sourcenotfound=Unable to download file {0}, source not found
-downloadfile.key=D
-downloadfile.name=Download File(s)
-downloadfile.unable_to_download=Unable to download
+download_file.description=Download selected file(s) (or files in directory). Deleted files will be re-downloaded
+download_file.failed.source_not_found=Unable to download file {0}, source not found
+download_file.key=D
+download_file.name=Download File(s)
+download_file.unable_to_download=Unable to download
 
-downloads_panel.cleanup_activity.description=Cleaning up old downloads
-downloads_panel.cleanup_activity.title=Cleaning up
+downloads_panel.clean_up_activity.description=Cleaning up old downloads
+downloads_panel.clean_up_activity.title=Cleaning up
 
 empty_recycle_bin.description=Empty the PowerFolder Recycle Bin
 empty_recycle_bin.key=E
@@ -267,9 +267,9 @@ empty_recycle_bin_confimation.empty=Empty
 empty_recycle_bin_confimation.text=PowerFolder Recycle Bin will be emptied.
 empty_recycle_bin_confimation.title=Empty PowerFolder Recycle Bin
 
-enablesilentmode.description=Disables all heavy tasks, e.g. scanning for changes in folders, thus no disk activity
-enablesilentmode.key=s
-enablesilentmode.name=Run Silently
+enable_silent_mode.description=Disables all heavy tasks, e.g. scanning for changes in folders, thus no disk activity
+enable_silent_mode.key=s
+enable_silent_mode.name=Run Silently
 
 estimation.unknown=unknown
 
