--- a/src/etc/Icons.properties
+++ b/src/etc/Icons.properties
@@ -10,8 +10,8 @@ clear_completed_downloads.icon=icons/Clear.gif
 clear_completed_uploads.icon=icons/Clear.gif
 clearrecentdownloads.icon=icons/Clear.gif
 #connect.icon=icons/Connect.gif
-#disablesilentmode.icon=icons/ScansDisabled.gif
-#enablesilentmode.icon=icons/SyncMode.gif
+#disable_silent_mode.icon=icons/ScansDisabled.gif
+#enable_silent_mode.icon=icons/SyncMode.gif
 #scanfolder.icon=icons/FileList.gif
 #foldercreate.icon=icons/FolderCreate.gif
 #preferences.icon=icons/Settings.gif
@@ -35,8 +35,8 @@ openfile.icon=icons/Play.gif
 addpattern.icon=icons/Pattern.gif
 settings.icon=icons/Settings.gif
 dialog.icon=icons/Dialog.gif
-downloadfile.icon=icons/Download.gif
-deletefile.icon=icons/Delete.gif
+download_file.icon=icons/Download.gif
+delete_file.icon=icons/Delete.gif
 open_local_folder.icon=icons/Directory.gif
 webservice_request_folder_join.icon=icons/PowerFolder.gif
 webservice_request_folder_leave.icon=icons/PowerFolder.gif
