#820 - better translation names for letter F, refs #820

--- a/src/etc/Icons.properties
+++ b/src/etc/Icons.properties
@@ -13,7 +13,7 @@ clearrecentdownloads.icon=icons/Clear.gif
 #disable_silent_mode.icon=icons/ScansDisabled.gif
 #enable_silent_mode.icon=icons/SyncMode.gif
 #scanfolder.icon=icons/FileList.gif
-#foldercreate.icon=icons/FolderCreate.gif
+#folder_create.icon=icons/FolderCreate.gif
 #preferences.icon=icons/Settings.gif
 #preferences.dialog.icon=icons/Settings.gif
 #about.icon=icons/PowerFolder.gif
@@ -175,7 +175,7 @@ sync_unknown.icon=icons/sync/Sync_unknown.png
 
 # crappy button icons that don't make sense removed (for now)
 previewfiles.icon=
-folderjoin.icon=
+folder_join.icon=
 empty_recycle_bin.icon=
 restorefile.icon=
 pluginsettings.icon=
