#820 - better translation names for letters J to M, refs #820

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -583,7 +583,7 @@ general.overwrite_all=Overwrite all
 general.password=Password
 general.powerfolder=PowerFolder
 general.preview_folder=Preview folder
-general.recyclebin=Recycle Bin
+general.recycle_bin=Recycle Bin
 general.saturday=Saturday
 general.save=Save
 general.save.key=S
@@ -626,70 +626,70 @@ invitation_files.description=PowerFolder invitations
 invite_received_handler.notify.message=You have received a PowerFolder invitation from {0}.
 invite_received_handler.notify.title=Invitation Received
 
-limitedconnection.dont_autodetect=No longer detect limited connectivity
-limitedconnection.text=PowerFolder has detected limited connectivity to the network.\nThis may caused by a firewall, router or windows connection share.\nHow to improve your connectivity is answered in our documentation.\nhttp\://docs.powerfolder.com
-limitedconnection.title=Limited connectivity
+limited_connection.dont_autodetect=No longer detect limited connectivity
+limited_connection.text=PowerFolder has detected limited connectivity to the network.\nThis may caused by a firewall, router or windows connection share.\nHow to improve your connectivity is answered in our documentation.\nhttp\://docs.powerfolder.com
+limited_connection.title=Limited connectivity
 
-linespeed.T1=T1 (1.544mbit)
-linespeed.T3=T3 (43.232mbit)
-linespeed.adsl128=DSL 1000 (128Kbit up)
-linespeed.adsl256=DSL 2000 (256Kbit up)
-linespeed.adsl512=DSL 6000 (512Kbit up)
-linespeed.adsl768=DSL 16000 (768Kbit up)
-linespeed.customspeed=Custom line
-linespeed.downloadspeed=Download limit
-linespeed.isdnspeed128=Dual ISDN (128Kbit up)
-linespeed.isdnspeed64=ISDN (64Kbit up)
-linespeed.lan10=LAN 10mbit/s
-linespeed.lan100=LAN 100mbit/s
-linespeed.lan1000=LAN 1000mbit/s
-linespeed.unlimited=Unlimited
-linespeed.uploadspeed=Upload limit
+line_speed.T1=T1 (1.544mbit)
+line_speed.T3=T3 (43.232mbit)
+line_speed.adsl128=DSL 1000 (128Kbit up)
+line_speed.adsl256=DSL 2000 (256Kbit up)
+line_speed.adsl512=DSL 6000 (512Kbit up)
+line_speed.adsl768=DSL 16000 (768Kbit up)
+line_speed.custom_speed=Custom line
+line_speed.download_speed=Download limit
+line_speed.isdn_speed128=Dual ISDN (128Kbit up)
+line_speed.isdn_speed64=ISDN (64Kbit up)
+line_speed.lan10=LAN 10mbit/s
+line_speed.lan100=LAN 100mbit/s
+line_speed.lan1000=LAN 1000mbit/s
+line_speed.unlimited=Unlimited
+line_speed.upload_speed=Upload limit
 
-loadinvitation.title=Join a folder from an invitation file
+load_invitation.title=Join a folder from an invitation file
 
-lowmemory.configure_failure=PowerFolder was unable to configure additional memory.\nPlease contact PowerFolder Support for advice.
-lowmemory.configure_success=Additional memory has been configured.\nPowerFolder must be restarted manually for this to take effect.
-lowmemory.do_nothing=Do Nothing
-lowmemory.increase=Increase Memory
-lowmemory.text=PowerFolder is running out of available memory.\n\nPowerFolder can attempt to increase the available memory.
-lowmemory.title=Low memory
+low_memory.configure_failure=PowerFolder was unable to configure additional memory.\nPlease contact PowerFolder Support for advice.
+low_memory.configure_success=Additional memory has been configured.\nPowerFolder must be restarted manually for this to take effect.
+low_memory.do_nothing=Do Nothing
+low_memory.increase=Increase Memory
+low_memory.text=PowerFolder is running out of available memory.\n\nPowerFolder can attempt to increase the available memory.
+low_memory.title=Low memory
 low_memory.error.title=Out of memory
 low_memory.error.text=PowerFolder requires more memory in your configuration.\n\nPlease reduce the number of managed files and folders, or configure a larger memory configuration.\n\nhttp\://wiki.powerfolder.com/wiki/Memory_configuration
 
-masternode.nobody=- nobody -
+master_node.nobody=- nobody -
 
 member.friend=Friend
 member.non_mutual_friend=None mutual friend
-member.onlan=On LAN
+member.on_lan=On LAN
 member.supernode=Supernode
 
-mirrorfolder.description=Setup the Online Storage to backup a folder
-mirrorfolder.key=B
-mirrorfolder.name=Backup Folder
+mirror_folder.description=Setup the Online Storage to backup a folder
+mirror_folder.key=B
+mirror_folder.name=Backup Folder
 
-mp3fileinfo.album=Album
-mp3fileinfo.artist=Artist
-mp3fileinfo.bitrate=Bit rate
-mp3fileinfo.length=Length
-mp3fileinfo.samplerate=Sample rate
-mp3fileinfo.size=Size
-mp3fileinfo.stereo_mono=Stereo/Mono
-mp3fileinfo.title=Title
+mp3_file_info.album=Album
+mp3_file_info.artist=Artist
+mp3_file_info.bit_rate=Bit rate
+mp3_file_info.length=Length
+mp3_file_info.sample_rate=Sample rate
+mp3_file_info.size=Size
+mp3_file_info.stereo_mono=Stereo/Mono
+mp3_file_info.title=Title
 
 my_folders_panel.hide_previews=Hide preview folders
 
-myfolderstable._total_number_of_files=Total \# Files
-myfolderstable.local_size=Local Size
-myfolderstable.members=Members
-myfolderstable.new_files=New Files
-myfolderstable.number_of_deleted_files=\# Deleted
-myfolderstable.number_of_incoming_files=Incoming
-myfolderstable.number_of_local_files=\# Local
-myfolderstable.number_of_members={0} members
-myfolderstable.sync=Sync
-myfolderstable.syncprofile=Transfer mode
-myfolderstable.total_size=Total Size
+my_folders_table._total_number_of_files=Total \# Files
+my_folders_table.local_size=Local Size
+my_folders_table.members=Members
+my_folders_table.new_files=New Files
+my_folders_table.number_of_deleted_files=\# Deleted
+my_folders_table.number_of_incoming_files=Incoming
+my_folders_table.number_of_local_files=\# Local
+my_folders_table.number_of_members={0} members
+my_folders_table.sync=Sync
+my_folders_table.transfer_mode=Transfer mode
+my_folders_table.total_size=Total Size
 
 navigationbuttons.back=Back
 navigationbuttons.back_to=Back to {0}
@@ -800,7 +800,7 @@ preferences.dialog.dialogs.title=Dialogs
 preferences.dialog.dialogs.warn_on_duplicate_folders=Warn if changing a transfer mode for multiple folders
 preferences.dialog.dialogs.warnoncloseifnotinsync=Warn on close of program if a folder is still synchronizing
 preferences.dialog.dialogs.warnonlimitedconnectivity=Warn on limited connectivity (No incomming connections)
-preferences.dialog.dialogs.warnonlowmemory=Warn on low available memory
+preferences.dialog.dialogs.warnonlow_memory=Warn on low available memory
 preferences.dialog.dialogs.warnonpossiblefilename_problems=Warn on possible filename problems (e.g. too long for Apple classic)
 preferences.dialog.dyndns=My (dynamic) DNS
 preferences.dialog.dyndns.title=DynDNS
@@ -1310,11 +1310,11 @@ wizard.host_panel.folder_host_success=You successfully set up a host folder\!\n
 wizard.host_panel.pcsjoin=Other computers can join this folder now
 wizard.host_panel.select=Please select the directory which should be the host
 wizard.invite.selectlocaldirectory=Please select local target directory for the files
-wizard.loadinvitation.addtofriends=Add {0} to friends
-wizard.loadinvitation.choosefile=Choose the invitation file
-wizard.loadinvitation.select=Select invitation file
-wizard.loadinvitation.selectfile=Please select invitation file
-wizard.loadinvitation.title=Load invitation
+wizard.load_invitation.addtofriends=Add {0} to friends
+wizard.load_invitation.choosefile=Choose the invitation file
+wizard.load_invitation.select=Select invitation file
+wizard.load_invitation.selectfile=Please select invitation file
+wizard.load_invitation.title=Load invitation
 wizard.login_online_storage.setup_default=Setup default synchronized folder.
 wizard.pfwizard.title=Wizard
 wizard.project_panel.folder_project_success=You successfully set up a project folder\!\n
