#820 - better translation names for letters N and O, refs #820

--- a/src/etc/Icons.properties
+++ b/src/etc/Icons.properties
@@ -28,10 +28,10 @@ showfileinfo.icon=icons/SendMessage.gif
 abort_transfer.icon=icons/Abort.gif
 folders.icon=icons/Folders.gif
 folder_invalid.icon=icons/Folder_invalid.gif
-#openchat.icon=icons/Chat.gif
+#open_chat.icon=icons/Chat.gif
 #sendinvitation.icon=icons/Chat.gif
 #reconnect.icon=icons/Connect.gif
-openfile.icon=icons/Play.gif
+open_file.icon=icons/Play.gif
 addpattern.icon=icons/Pattern.gif
 settings.icon=icons/Settings.gif
 dialog.icon=icons/Dialog.gif
