#820 - better translation names for letter P, refs #820

--- a/src/etc/Icons.properties
+++ b/src/etc/Icons.properties
@@ -174,9 +174,9 @@ sync_100.icon=icons/sync/Sync_0100.png
 sync_unknown.icon=icons/sync/Sync_unknown.png
 
 # crappy button icons that don't make sense removed (for now)
-previewfiles.icon=
+preview_files.icon=
 folder_join.icon=
 empty_recycle_bin.icon=
 restorefile.icon=
-pluginsettings.icon=
+plugin_settings.icon=
 plugin_enable.icon=
